--- a/evaluate-news-nlp/package.json
+++ b/evaluate-news-nlp/package.json
@@ -13,10 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.21.1",
     "aylien_textapi": "^0.7.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "node-fetch": "^2.6.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
