--- a/evaluate-news-nlp/package.json
+++ b/evaluate-news-nlp/package.json
@@ -2,6 +2,9 @@
   "name": "example-project",
   "version": "1.0.0",
   "main": "index.js",
+  "jest": {
+    "verbose": true
+  },
   "scripts": {
     "test": "jest",
     "start": "node src/server/index.js",
@@ -41,3 +44,4 @@
     "workbox-webpack-plugin": "^6.1.2"
   }
 }
+
